Application March, 10 + date format changed

--- a/bower.json
+++ b/bower.json
@@ -6,10 +6,11 @@
     "ritualcode <ritualcode@gmail.com>"
   ],
   "dependencies": {
-    "jquery":"latest",
-    "bootstrap":"latest",
-    "Faker":"latest",
-    "bootbox":"latest"
+    "jquery": "latest",
+    "bootstrap": "latest",
+    "Faker": "latest",
+    "bootbox": "latest",
+    "moment": "latest"
   },
   "license": "MIT",
   "ignore": [
